# ITMO_AutoML

./: .gitignore  README.md  calculate_all_metrics.py  main.py  main_eda.py  pyproject.toml  run_blending.py  train_custom.py  train_hf.py  train_lama.py
configs/: base_config.yaml
logs/custom_xgboost/: events.out.tfevents.1776887226.COLBAMAX.290686.0  events.out.tfevents.1776888137.COLBAMAX.293410.0  events.out.tfevents.1776888638.COLBAMAX.294954.0  events.out.tfevents.1776889575.COLBAMAX.298368.0
logs/final/: comparison_metrics.csv
logs/lama_baseline/: events.out.tfevents.1776876747.COLBAMAX.258804.0  events.out.tfevents.1776881732.COLBAMAX.273586.0  events.out.tfevents.1776882391.COLBAMAX.275798.0
logs/lama_baseline_v2/: events.out.tfevents.1776882894.COLBAMAX.277136.0  events.out.tfevents.1776883656.COLBAMAX.279664.0  events.out.tfevents.1776889007.COLBAMAX.296110.0
output/: oof_custom_xgb.csv  oof_lama.csv  submission_custom_xgb.csv  submission_final_blend.csv  submission_hf_e5.csv
src/: blender.py  data_loader.py  eda.py  features.py  models.py  utils.py
